# Wasabistotage

./: .replit  bot.py  database.py  file_bot.session  file_bot.session-journal  filebot.session  filebot.session-journal  main.py  pyproject.toml  replit.md  requirements.txt  simple_bot.py  wasabi_storage.py  web_app.py
templates/: base.html  files.html  index.html  player.html
